2018-03-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed all deprecated properties and API, dropped TYPO3 7 compatibility, resolves #57

2018-03-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected extension dependencies, resolves #56
	* Released version 4.0.2

2018-02-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Made sync warning sticky, resolves #55

2018-02-03 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added handling of disabled Scheduler tasks, resolves #54
	* Replaced :class: construct in documentation, resolves #46
	* Added message about running synchronisation, resolves #50
	* Released version 4.0.1

2018-01-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of moved records, resolves #32

2017-11-21 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released version 4.0.0

2017-11-12 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added information about mapping MM relations, resolves #34

2017-11-11 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added note about "requiring" fields, resolves #36
	* Renamed column configuration properties containing underscores, resolves #38

2017-11-09 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Updated documentation, resolves #26

2017-11-08 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added possibility of default value for mapping configurations, resolves #35
	* Moved Connector callback to own Step class, resolves #37

2017-11-05 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Fixed import of nested structures as pages, resolves #11
	* Improved handling of Scheduler availability, resolves #33

2017-10-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Improved handling of storage pid, resolves #30
	* Adapted all unit and functional tests to TYPO3 v8 and nimut/testing-framework
	* Cleaned up the Importer class, resolves #25
	* Switched to moment.js for date formatting in Log module, resolves #19

2017-10-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>
