@@ -8,9 +8,9 @@ before_script:
   - composer require cobweb/svconnector_csv
 script:
   - phpunit --colors -c vendor/nimut/testing-framework/res/Configuration/UnitTests.xml Tests/Unit/
-  - >
-    export typo3DatabaseName="typo3";
-    export typo3DatabaseHost="localhost";
-    export typo3DatabaseUsername="root";
-    export typo3DatabasePassword="";
-    phpunit --colors -c vendor/nimut/testing-framework/res/Configuration/FunctionalTests.xml Tests/Functional/;
+#  - >
+#    export typo3DatabaseName="typo3";
+#    export typo3DatabaseHost="localhost";
+#    export typo3DatabaseUsername="root";
+#    export typo3DatabasePassword="";
+#    phpunit --colors -c vendor/nimut/testing-framework/res/Configuration/FunctionalTests.xml Tests/Functional/;
