@@ -1,6 +1,6 @@
 <?php
 
-namespace Cobweb\ExternalImport\Tests\Unit;
+namespace Cobweb\ExternalImport\Tests\Unit\Utility;
 
 /*
  * This file is part of the TYPO3 CMS project.
